Replace deprecated method calls.